--- a/app/src/main/res/layout/activity_user_profile_page.xml
+++ b/app/src/main/res/layout/activity_user_profile_page.xml
@@ -20,7 +20,7 @@
             android:background="#5CC09F"  >
 
             <ImageView
-                android:id="@+id/imageView_profile_dp"
+                android:id="@+id/image"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_centerInParent="true"
@@ -29,10 +29,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView_show_welcome"
-                android:layout_below="@id/imageView_profile_dp"
+                android:id="@+id/uploadImage"
+                android:layout_below="@id/image"
                 android:hint="Loading..."
                 android:layout_centerHorizontal="true"
+                android:text="Click Here to Upload Image"
+                android:background="#2CA1D7"
                 android:layout_marginTop="5dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textColor="@color/white" />
